--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    repositories{
+        google()
+        jcenter()
+    }
+
+    dependencies{
+        classpath 'com.google.gms.google-services:4.4.2'
+    }
+}
+
+
+
+
 allprojects {
     repositories {
         google()
