--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.8.1
+  flutter_dropzone: ^4.2.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
