--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_core: ^3.8.1
   flutter_dropzone: ^4.2.1
   dotted_border: ^2.1.0
+  flutter_bloc: ^8.1.6
+  bloc: ^8.1.4
+  firebase_auth: ^5.3.4
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
