--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get: ^4.6.6
   fluttertoast: ^8.2.10
   cloud_firestore: ^5.5.1
+  firebase_storage: ^12.3.7
   
 dev_dependencies:
   flutter_test:
