--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fluttertoast: ^8.2.10
   cloud_firestore: ^5.5.1
   firebase_storage: ^12.3.7
+  cached_network_image: ^3.4.1
   
 dev_dependencies:
   flutter_test:
